[gd_scene load_steps=13 format=3 uid="uid://dp7hykj2x0s6y"]

[ext_resource type="Script" path="res://scenes/playground.gd" id="1_2nymt"]
[ext_resource type="PackedScene" uid="uid://bemh7hd2chnlj" path="res://scenes/Player.tscn" id="1_qv6v6"]
[ext_resource type="PackedScene" uid="uid://dqyu7e6230kep" path="res://scenes/background_generator.tscn" id="2_0p2cx"]
[ext_resource type="PackedScene" uid="uid://t3hqd341ct5" path="res://scenes/obstacle_generator.tscn" id="2_08xgw"]
[ext_resource type="PackedScene" uid="uid://b8esc713idmvi" path="res://scenes/obstacles/aiming_obstacle.tscn" id="2_k4d5x"]
[ext_resource type="PackedScene" uid="uid://df68vq3gn825x" path="res://scenes/floor.tscn" id="3_22sj6"]
[ext_resource type="PackedScene" uid="uid://b14pld32g3be" path="res://scenes/game_interface.tscn" id="3_nljyv"]
[ext_resource type="PackedScene" uid="uid://dr0yfhmnym1ld" path="res://scenes/obstacles/basic_obstacle.tscn" id="5_5iktw"]
[ext_resource type="PackedScene" uid="uid://byqkcy3lapy3u" path="res://scenes/sniper.tscn" id="5_a1r5c"]
[ext_resource type="PackedScene" uid="uid://dmlq4ggfgqm8t" path="res://scenes/obstacles/moving_obstacle.tscn" id="6_w6rub"]
[ext_resource type="PackedScene" uid="uid://ck6cotaesxa8x" path="res://audio_manager.tscn" id="8_ihwcr"]
[ext_resource type="AudioStream" uid="uid://ds4tqy837ymjp" path="res://audio/playing-with-danger remix.mp3" id="11_lim5o"]

[node name="Playground" type="Node"]
script = ExtResource("1_2nymt")
is_incrementing_score = true

[node name="BackgroundGenerator" parent="." instance=ExtResource("2_0p2cx")]

[node name="Player" parent="." instance=ExtResource("1_qv6v6")]
position = Vector2(168, 495)
gravity_force = 65.0
max_velocity = 700.0
min_velocity = -600.0
current_state = 1

[node name="SniperGenerator" parent="." instance=ExtResource("2_08xgw")]
position = Vector2(1381, 71)
progress_speed = 600.0
possible_obstacles = [ExtResource("5_a1r5c")]
obsctacle_cooldown = 15.0

[node name="ObstacleGenerator" parent="." instance=ExtResource("2_08xgw")]
position = Vector2(1381, 71)
progress_speed = 700.0
possible_obstacles = [ExtResource("5_5iktw"), ExtResource("6_w6rub"), ExtResource("2_k4d5x")]

[node name="ObstacleGenerator2" parent="." instance=ExtResource("2_08xgw")]
position = Vector2(1381, 70)
progress_speed = 1200.0
possible_obstacles = [ExtResource("5_5iktw"), ExtResource("6_w6rub"), ExtResource("2_k4d5x")]
obsctacle_cooldown = 1.5

[node name="Floor" parent="." instance=ExtResource("3_22sj6")]
position = Vector2(166, 670)

[node name="GameInterface" parent="." instance=ExtResource("3_nljyv")]

[node name="ceiling" parent="." instance=ExtResource("3_22sj6")]
position = Vector2(172, 4)
rotation = 3.14159

[node name="AudioManager" parent="." instance=ExtResource("8_ihwcr")]
position = Vector2(1381, 355)

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_lim5o")
volume_db = -10.307
autoplay = true

[connection signal="player_died" from="Player" to="." method="_on_player_player_died"]
[connection signal="finished" from="Music" to="." method="_on_music_finished"]
